--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,16 +35,13 @@ jobs:
           COMPOSER_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: composer install --no-dev --optimize-autoloader
 
-      - name: Copy into "boekuwzending" directory
-        run: |
-
       - name: Copy into "dist/boekuwzending/" directory
         run: |
           mkdir -p dist/boekuwzending/
-          cp -r "$(ls -A | grep -v "dist/boekuwzending")" dist/boekuwzending/
+          ls -A | grep -v "dist/boekuwzending" | xargs cp -r -t dist/boekuwzending/
           ls -al dist/boekuwzending/
 
-      # Zip attempt 17
+      # Zip attempt 23
       - name: Zip "dist/boekuwzending" Release
         uses: thedoctor0/zip-release@master
         with:
